--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -970,6 +970,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="145dp"
                 android:layout_gravity="center"
+                android:paddingTop="-5dp"
+                android:paddingBottom="-5dp"
                 app:indicator_visibility="invisible"/>
 
         </LinearLayout>
