--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -958,7 +958,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@drawable/background_round_white"
+            android:background="#DBF2FF"
             android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
