navigation and other bug fixes

--- a/app/src/main/res/navigation/auth_navigation.xml
+++ b/app/src/main/res/navigation/auth_navigation.xml
@@ -50,6 +50,9 @@
         <action
             android:id="@+id/action_signUpFragment_to_PINManagerFragment"
             app:destination="@id/PINManagerFragment" />
+        <action
+            android:id="@+id/action_signUpFragment_to_getStartedSignUpFragment"
+            app:destination="@id/getStartedSignUpFragment" />
     </fragment>
     <fragment
         android:id="@+id/PINManagerFragment"
