--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -60,6 +60,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/text_back_signup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
@@ -67,8 +68,7 @@
                         android:textColor="@color/colorPrimary"
                         android:textSize="28sp"
                         android:textStyle="bold"
-                        android:drawableStart="@drawable/ic_chevron_left"
-                        android:drawableTint="@color/colorPrimary"/>
+                        app:drawableStartCompat="@drawable/ic_chevron_left_blue" />
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
