--- a/app/src/main/res/layout/beneficiaries_placeholder.xml
+++ b/app/src/main/res/layout/beneficiaries_placeholder.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="25dp">
 
@@ -14,12 +15,24 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
     <ImageView
+        android:id="@+id/coming_soon_close"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="end"
+        android:layout_margin="10dp"
+        android:layout_weight=".9"
+        android:src="@drawable/ic_close_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/banner_ben_image"
+        app:tint="@color/colorPrimary" />
+    <ImageView
         android:id="@+id/banner_ben_image"
         android:layout_width="317dp"
         android:layout_height="184dp"
         android:padding="1dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/coming_soon_close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/view1"
         android:background="@drawable/rounded_rectangle_mild_gray_background"
