--- a/app/src/main/res/layout/fragment_beneficiaries_list.xml
+++ b/app/src/main/res/layout/fragment_beneficiaries_list.xml
@@ -24,6 +24,18 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ImageView
+        android:id="@+id/about_beneficiary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_question_1_"
+        android:layout_margin="15dp"/>
+
+
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_add_beneficiary"
         android:layout_width="wrap_content"
