--- a/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
+++ b/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
@@ -31,13 +31,14 @@
     android:id="@+id/no_nearby_merchant"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="NO NEARBY MERCHANT"
+    android:text="NO NEARBY MERCHANT FOUND"
     android:textSize="18sp"
+    android:textColor="@color/colorPrimary"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/appbar"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:visibility="gone"/>
+    />
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_container"
         android:layout_width="match_parent"
