Wallet To Wallet Transfer fix

--- a/app/src/main/res/layout/dialog_enter_pin.xml
+++ b/app/src/main/res/layout/dialog_enter_pin.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
-            android:text="ENTER CUSTOMER'S PIN"
+            android:text="ENTER PIN"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold" />
