--- a/app/src/main/res/layout/layout_view_all_products.xml
+++ b/app/src/main/res/layout/layout_view_all_products.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f8f8ff"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="#f8f8ff">
 
 
         <androidx.appcompat.widget.Toolbar
@@ -57,3 +59,4 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
