--- a/app/src/main/res/navigation/buy_navigation.xml
+++ b/app/src/main/res/navigation/buy_navigation.xml
@@ -10,7 +10,14 @@
         android:id="@+id/walletBuyFragment"
         android:name="com.cabral.emaishapay.fragments.buy_fragments.WalletBuyFragment"
         android:label="ShopProductsFragment"
-        tools:layout="@layout/new_fragment_buy_home"/>
+        tools:layout="@layout/new_fragment_buy_home">
+        <action
+            android:id="@+id/action_walletBuyFragment_to_viewAllPopularProducts"
+            app:destination="@id/viewAllPopularProducts" />
+        <action
+            android:id="@+id/action_walletBuyFragment_to_viewAllTopDeals"
+            app:destination="@id/viewAllTopDeals" />
+    </fragment>
 
 
     <fragment
@@ -31,4 +38,16 @@
         android:name="com.cabral.emaishapay.fragments.buy_fragments.My_Orders"
         android:label="MyOrdersFragment"
         tools:layout="@layout/buy_inputs_orders"/>
+
+    <fragment
+        android:id="@+id/viewAllPopularProducts"
+        android:name="com.cabral.emaishapay.fragments.buy_fragments.ViewAllPopularProducts"
+        android:label="ViewAllPopularProducts"
+        tools:layout="@layout/layout_view_all_products"/>
+
+    <fragment
+        android:id="@+id/viewAllTopDeals"
+        android:name="com.cabral.emaishapay.fragments.buy_fragments.ViewAllTopDeals"
+        android:label="ViewAllTopDeals"
+        tools:layout="@layout/layout_view_all_products"/>
 </navigation>
