Required UI Changes

--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -60,7 +60,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -225,7 +225,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -258,7 +258,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -371,7 +371,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             android:focusableInTouchMode="false"
                             app:layout_constraintBottom_toBottomOf="parent"
