--- a/app/src/main/res/drawable/edit_text_bottom_line_gray.xml
+++ b/app/src/main/res/drawable/edit_text_bottom_line_gray.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:bottom="1dp"
         android:left="-3dp"
@@ -12,6 +13,7 @@
 
             <solid android:color="#00ffffff" />
 
+            <padding android:top="4dp"/>
         </shape>
     </item>
 </layer-list>
