--- a/app/src/main/res/layout/fragment_employment_information.xml
+++ b/app/src/main/res/layout/fragment_employment_information.xml
@@ -76,7 +76,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +144,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -191,7 +191,7 @@
                             android:inputType="phone"
                             android:maxLength="9"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp" />
                     </LinearLayout>
 
@@ -218,7 +218,7 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
