--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -90,9 +90,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:layout_marginBottom="10dp"
-                            android:src="@drawable/ic_right_chevron_arrow_white"
-                            android:rotation="90"/>
+                            android:layout_margin="10dp"
+                            android:src="@drawable/ic_down_chevron"/>
 
                     </RelativeLayout>
 
@@ -124,7 +123,7 @@
                             android:background="@android:color/transparent"
                             android:padding="12dp"
                             android:textSize="14sp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             android:maxLength="14"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +155,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:padding="12dp"
-                            android:textColor="@color/textColorPrimaryLight"
+                            android:textColor="@color/colorPrimaryDark"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
