--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
@@ -111,6 +111,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
+            android:paddingBottom="5dp"
             android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
@@ -127,6 +128,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
+            android:paddingBottom="5dp"
             android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
@@ -143,6 +145,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
+            android:paddingBottom="5dp"
             android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
@@ -159,6 +162,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
+            android:paddingBottom="5dp"
             android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
