--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -784,7 +784,7 @@
             <RelativeLayout
                 android:id="@+id/layout_last_credit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 android:paddingBottom="10dp"
@@ -828,6 +828,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Name"
+                    android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
                     android:textSize="12sp"
                     android:gravity="center"
@@ -859,7 +860,7 @@
             <RelativeLayout
                 android:id="@+id/layout_last_debit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:paddingBottom="10dp"
@@ -903,6 +904,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Name"
+                    android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
                     android:textSize="12sp"
                     android:gravity="center"
