--- a/app/src/main/res/navigation/buy_navigation.xml
+++ b/app/src/main/res/navigation/buy_navigation.xml
@@ -17,6 +17,12 @@
         <action
             android:id="@+id/action_walletBuyFragment_to_viewAllTopDeals"
             app:destination="@id/viewAllTopDeals" />
+        <action
+            android:id="@+id/action_walletBuyFragment_to_productDescription"
+            app:destination="@id/productDescription" />
+        <action
+            android:id="@+id/action_walletBuyFragment_to_myCart"
+            app:destination="@id/myCart" />
     </fragment>
 
 
@@ -60,4 +66,37 @@
         android:name="com.cabral.emaishapay.fragments.buy_fragments.Shipping_Address"
         android:label="ShippingAdress"
         tools:layout="@layout/buy_inputs_address"/>
+
+    <fragment
+        android:id="@+id/productDescription"
+        android:name="com.cabral.emaishapay.fragments.buy_fragments.Product_Description"
+        android:label="ProductDescription"
+        tools:layout="@layout/buy_inputs_product_description">
+        <action
+            android:id="@+id/action_productDescription_to_myCart"
+            app:destination="@id/myCart" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/checkOutFinal"
+        android:name="com.cabral.emaishapay.fragments.buy_fragments.CheckoutFinal"
+        android:label="ProductDescription"
+        tools:layout="@layout/buy_inputs_checkout">
+        <action
+            android:id="@+id/action_checkOutFinal_to_shippingAddress"
+            app:destination="@id/shippingAddress" />
+        <action
+            android:id="@+id/action_checkOutFinal_to_walletBuyFragment"
+            app:destination="@id/walletBuyFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/myCart"
+        android:name="com.cabral.emaishapay.fragments.buy_fragments.My_Cart"
+        android:label="MyCart"
+        tools:layout="@layout/buy_inputs_my_cart">
+        <action
+            android:id="@+id/action_myCart_to_walletAddressesFragment"
+            app:destination="@id/walletAddressesFragment" />
+    </fragment>
 </navigation>
