--- a/app/src/main/res/layout/buy_inputs_product_description.xml
+++ b/app/src/main/res/layout/buy_inputs_product_description.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:custom="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/tools">
+<RelativeLayout
+
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f8f8ff"
@@ -617,3 +619,4 @@
 
     </LinearLayout>
 </RelativeLayout>
+</layout>
