added navigation for nearby merchants

--- a/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
+++ b/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
@@ -1,9 +1,10 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:clickable="true"
@@ -56,7 +57,5 @@
 
     </androidx.core.widget.NestedScrollView>
 
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
